# Devsprint

./: .gitignore  Procfile  README.md  __main__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: format_and_lint.yml
src/: __init__.py
src/client/: __init__.py  environment.py  errors.py  logger.py
src/database/: __init__.py
src/database/migrations/: migrator.py
src/database/tables/: __init__.py  _table.py  config.py  login.py  messages.py
src/routes/: __init__.py  api.py  home.py
src/templates/: about.html  error.html  footer.html  headers.html  index.html  login.html  navbar.html  profile.html  signup.html  template.html  timeline.html
src/templates/static/: helper.js  style.css
src/utils/: cache.py  constants.py  models.py
